	- Make `ResourceAction` and `AlternativeSprites` containers for the `Resource` objects.
	- Rename `SoundSprite` to `Sound`.
	- Rename `GraphicsSprite` to `Sprite`.
	- Rename `EmptyGraphicsSprite` to `EmptySprite`.
- Fix auto-assigned IDs overlapping when adding vehicles.
- Fix encoding of label lists in Action0 properties.
- Add sprite cache.
- Optimize memory usage when writing NewGRF.
- Optimize grf file size by removing duplicate sprites (by data).
- Add `Mask`, `FileMask` and `ImageMask` classes to define sprite masks.
- Add `mode` argument to `Mask` with option to overdraw sprite.
- Add `ShipFlags` enum.
- Add support for the extended format in Action1.
- Add `main` function to handle command line arguments.
- Remove `Mask` offset, add `FileMask` absolute positioning.

- lib: Fix `CallbackManager.make_switches` for non-vehicle features.
- lib: `CallbackManager` rewrite:
	- Support all features (non-vehicles may still be incomplete).
	- Make `CallbackManager` abstract class, use `make_callback_manager` function instead.
	- Support splitting callbacks for default and purchase branch with `DualCallback`.
	- Use `graphics.purchase` instead of `purchase_graphics` attribute.
- lib: Add `Ship.Flags` and `RoadVehicle.Flags` for unified access to flags.
- lib: Add `EngineOverride` sprite generator.
- lib: Set correct flags and track_type on auto-articulated parts.
- lib: Fix unicode vehicle names.

- grftopy: Fix missing sprite zoom

---------
0.2.2
---------

- Change license to GPL v2+ (same as nml) instead of v3 to allow reusing v2 code/resources.
- Fix graphics sprite composition.
- Fix Train weight Action 0 properties (low and high bytes).
- Fix compilation of generic var parameter in Action 2.
- Fix `var(...)` call in `Switch` code not accepting `param` value without parentheses.
- Fix default purchase sprite for auto-articulated trains.

- Rename `speed` Action 0 property for ships to `max_speed` for consinstency with other vehile types.